[metadata]
name=melvin
version=0.1
license=MIT
author=Jamie Quinn
author_email=jamiejquinn@jamiejquinn.com
url = https://github.com/jamiejquinn/melvin.py

[options]
packages = melvin
python_requires = >=3.5
install_requires = numpy; scipy; pytest

[options.extras_require]
cupy = cupy
plotting = matplotlib; cmocean

[flake8]
per-file-ignores = __init__.py:F401
